--- a/util/requirements.txt
+++ b/util/requirements.txt
@@ -1,6 +1,21 @@
 bcrypt==4.2.0
+certifi==2024.8.30
 cffi==1.17.1
+charset-normalizer==3.3.2
 cryptography==43.0.1
+idna==3.10
+isodate==0.6.1
+meteomatics==2.11.3
+numpy==2.1.1
+pandas==2.2.3
 paramiko==3.5.0
+pathlib2==2.3.7.post1
 pycparser==2.22
 PyNaCl==1.5.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+requests==2.32.3
+six==1.16.0
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==5.0.3
