--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "devDependencies": {
     "@babel/cli": "^7.25.7",
     "@babel/core": "^7.25.8",
+    "@babel/plugin-syntax-flow": "^7.25.7",
+    "@babel/plugin-transform-react-jsx": "^7.25.7",
+    "@babel/plugin-transform-typescript": "^7.25.7",
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-typescript": "^7.25.7"
   }
