added build.sh to build jsx for react

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "babel display/src --out-dir dist/display"
+    "build": "babel display/src --out-dir dist"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.7",
