--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
 cryptography==43.0.1
+gitdb==4.0.11
+GitPython==3.1.43
 idna==3.10
 isodate==0.6.1
 meteomatics==2.11.3
@@ -16,6 +18,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
 six==1.16.0
+smmap==5.0.1
 tzdata==2024.2
 urllib3==2.2.3
 watchdog==5.0.3
